Fixed swagger and routes
