# apps/user/controllers/auth.go
@@ -103,7 +103,6 @@ func (ac AuthController) Register(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param email query string true "email"
-// @Param deviceName query string true "send user operating system + browser name in this param"
 // @Param password query string true "password"
 // @Success 200 {object} swagger.LoginResponse
 // @failure 422 {object} swagger.FailedValidationResponse
